Adding user-defined exception

--- a/AvaliacaoTecnica/AvaliacaoTecnica.csproj
+++ b/AvaliacaoTecnica/AvaliacaoTecnica.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\TreatedException.cs" />
     <Compile Include="Domain\Tree.cs" />
     <Compile Include="Domain\TreeNode.cs" />
     <Compile Include="Program.cs" />
